Spacing fix

--- a/src/containers/navbar/Navbar/Navbar.css
+++ b/src/containers/navbar/Navbar/Navbar.css
@@ -18,6 +18,7 @@
 
 .Navbar .navbar-items-container.pull-right {
   justify-content: flex-end !important;
+  width: 100%;
 }
 
 @media only screen and (max-width : 800px) {
